--- a/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj
+++ b/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj
@@ -79,6 +79,11 @@
   <ItemGroup>
     <CudaCompile Include="kernel.cu" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="headers\distance.h" />
+    <ClInclude Include="headers\item.h" />
+    <ClInclude Include="headers\node.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 11.6.targets" />
