- Add Tour header file

--- a/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj
+++ b/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="headers\distance.h" />
     <ClInclude Include="headers\item.h" />
     <ClInclude Include="headers\node.h" />
+    <ClInclude Include="headers\tour.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
