--- a/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj.filters
+++ b/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="headers\distance.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="headers\tour.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
