--- a/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj.filters
+++ b/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj.filters
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="genetic_ttp.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="headers">
       <UniqueIdentifier>{a9a9ad5a-8a70-4831-a952-cf98753ae69c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="data">
+      <UniqueIdentifier>{b8e64f69-2543-4568-8e02-c3231b074968}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -21,5 +24,13 @@
     <ClInclude Include="headers\tour.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="headers\population.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="data\w5_n4_bounded-strongly-corr.ttp">
+      <Filter>data</Filter>
+    </None>
   </ItemGroup>
 </Project>
