--- a/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj.filters
+++ b/TTP/TTP_STRUCT/TTP_STRUCT.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="headers\population.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="headers\gpu_util.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="data\w5_n4_bounded-strongly-corr.ttp">
