Incomplete attempt to solve TSP

--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -87,6 +87,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="genetic.cuh" />
     <ClInclude Include="headers\distance.cuh" />
     <ClInclude Include="headers\item.cuh" />
     <ClInclude Include="headers\node.cuh" />
