Warning Removal Over Solution

--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -87,8 +87,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="genetic.cuh" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="headers\distance.cuh" />
+    <ClInclude Include="headers\genetic.cuh" />
     <ClInclude Include="headers\item.cuh" />
     <ClInclude Include="headers\node.cuh" />
     <ClInclude Include="headers\population.cuh" />
