--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -87,7 +87,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="config.h" />
+    <ClInclude Include="headers\config.h" />
     <ClInclude Include="headers\distance.cuh" />
     <ClInclude Include="headers\genetic.cuh" />
     <ClInclude Include="headers\item.cuh" />
