Add 'greedy.h' with functions for greedy item selection Modify 'item.cuh', add new property pw_ratio Modify 'node.cuh', adjustments to include new property in item Modify 'population.cuh', alter printPopulation function to print the full tour Modify 'tour.cuh', add new properties (profit, time) and include the return to the origin node (city)

--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="headers\config.h" />
     <ClInclude Include="headers\distance.cuh" />
     <ClInclude Include="headers\genetic.cuh" />
+    <ClInclude Include="headers\greedy.h" />
     <ClInclude Include="headers\item.cuh" />
     <ClInclude Include="headers\node.cuh" />
     <ClInclude Include="headers\population.cuh" />
