--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj.filters
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="headers\config.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="headers\greedy.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
