--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj.filters
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="headers\greedy.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="headers\params.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
