--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -93,6 +93,7 @@
     <ClInclude Include="headers\greedy.h" />
     <ClInclude Include="headers\item.cuh" />
     <ClInclude Include="headers\node.cuh" />
+    <ClInclude Include="headers\params.h" />
     <ClInclude Include="headers\population.cuh" />
     <ClInclude Include="headers\tour.cuh" />
   </ItemGroup>
