--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -91,6 +91,8 @@
     <ClInclude Include="headers\distance.cuh" />
     <ClInclude Include="headers\genetic.cuh" />
     <ClInclude Include="headers\greedy.h" />
+    <ClInclude Include="headers\helper_cuda.h" />
+    <ClInclude Include="headers\helper_functions.h" />
     <ClInclude Include="headers\item.cuh" />
     <ClInclude Include="headers\node.cuh" />
     <ClInclude Include="headers\params.h" />
