--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj.filters
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClInclude Include="headers\params.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="headers\helper_cuda.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\helper_functions.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
