- Adjustments in some data transformation - New function to save initial population on output file

--- a/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
+++ b/TTP/TTP_EXPRESS/TTP_EXPRESS.vcxproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <ClInclude Include="headers\config.h" />
     <ClInclude Include="headers\distance.cuh" />
+    <ClInclude Include="headers\File.h" />
     <ClInclude Include="headers\genetic.cuh" />
     <ClInclude Include="headers\greedy.h" />
     <ClInclude Include="headers\item.cuh" />
